...
        android:id="@+id/filter_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:viewBindingIgnore="true">

    <EditText
            android:id="@+id/text_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
...
            android:ems="10"
            android:hint="@string/search_placeholder"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    <FrameLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_filter"
            app:defaultNavHost="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
