<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/profiles_activity_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profileList.CommunityActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/Theme.ConnectOut.AppBarOverlay"
            app:navigationIcon="@drawable/back_arrow_image">

        <Button
                android:id="@+id/user_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/fab_margin"
                android:background="?attr/colorPrimary"
                android:checked="true"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="15dp"></Button>
    </androidx.appcompat.widget.Toolbar>


    <FrameLayout
            android:id="@+id/container_users_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_list_toolbar" />
</RelativeLayout>
