...
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profileList.ProfileListFragment">

    <ListView
            android:id="@+id/user_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
...
