<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/popup_events_filter"
        android:padding="16dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter Options"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

    <EditText
            android:id="@+id/events_filter_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="15"
            android:hint="Search by title/description"
            android:text="" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Events around (km)" />

    <SeekBar
            android:id="@+id/events_filter_seekbar"
            android:min="1"
            android:max="100"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

...
                android:layout_marginLeft="50dp" />


    </RelativeLayout>

    <Button
            android:id="@+id/events_filter_apply_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:layout_marginTop="16dp" />

</LinearLayout>
