...
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        android:theme="@style/Theme.ConnectOut.AppBarOverlay">

        <Button
            android:id="@+id/events_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:text="@string/filter"
            android:background="@color/white"
...
